Removed --enable-preview config